<package format="2">
    <name>laser_stickwall</name>
    <version>1.0.0</version>
    <description>Wall Detection and Navigation Package.</description>
    <maintainer email="sheldonvon@outlook.com">sv</maintainer>
    <license>BSD</license>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>libpcl-all-dev</build_depend>
    <exec_depend>libpcl-all</exec_depend>
</package>